maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:47: error: type mismatch;
 found   : Int
 required: ?{def +(x$1: ? >: Double(0.5)): ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method int2long in object Int of type (x: Int)Long
 and method int2float in object Int of type (x: Int)Float
 are possible conversion functions from Int to ?{def +(x$1: ? >: Double(0.5)): ?}
				sommeangle = sommeangle +0.5
                                             ^Escaper:47: error: overloaded method value + with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Double)
				sommeangle = sommeangle +0.5
                                                        ^